[gd_scene load_steps=7 format=3 uid="uid://dgqmb7advu35j"]

[ext_resource type="Script" uid="uid://755o0ybhq810" path="res://scripts/menus/cutscene_history_panel/cutscene_history_item_panel.gd" id="1_pnvb1"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="2_as47e"]
[ext_resource type="StyleBox" uid="uid://dq64op7nmd3n2" path="res://themes/text_box_panel.tres" id="3_v6mwv"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="4_2m515"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ob6i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ymr2h"]

[node name="CutsceneHistoryItemPanel" type="Panel"]
custom_minimum_size = Vector2(1280, 131)
offset_right = 1280.0
offset_bottom = 193.0
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("2_as47e")
theme_override_styles/panel = ExtResource("3_v6mwv")
script = ExtResource("1_pnvb1")

[node name="TextContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_as47e")
theme_override_styles/panel = SubResource("StyleBoxEmpty_5ob6i")

[node name="MarginContainer" type="MarginContainer" parent="TextContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="TextContainer/MarginContainer"]
layout_mode = 2

[node name="SpeakerSection" type="HBoxContainer" parent="TextContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 57)
layout_mode = 2

[node name="SpeakerSpriteControl" type="Control" parent="TextContainer/MarginContainer/VBoxContainer/SpeakerSection"]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="SpeakerSprite" type="AnimatedSprite2D" parent="TextContainer/MarginContainer/VBoxContainer/SpeakerSection/SpeakerSpriteControl"]
position = Vector2(32, 31)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ymr2h")

[node name="SpeakerText" type="RichTextLabel" parent="TextContainer/MarginContainer/VBoxContainer/SpeakerSection"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("4_2m515")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 44
theme_override_font_sizes/italics_font_size = 44
theme_override_font_sizes/mono_font_size = 44
theme_override_font_sizes/normal_font_size = 44
theme_override_font_sizes/bold_font_size = 44
bbcode_enabled = true
text = "Speaker:"
fit_content = true

[node name="TextBoxText" type="RichTextLabel" parent="TextContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_2m515")
theme_override_constants/outline_size = 0
theme_override_font_sizes/bold_italics_font_size = 28
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/mono_font_size = 28
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "Some line of dialogue...
Line two
Line three"
scroll_active = false

[connection signal="animation_finished" from="TextContainer/MarginContainer/VBoxContainer/SpeakerSection/SpeakerSpriteControl/SpeakerSprite" to="." method="_on_speaker_sprite_animation_finished"]
